# MinerDisplay

./: AlgoData.h  AlgoJSON.h  BalanceJSON.h  BaseDisplay.h  Button.cpp  Button.h  CMakeLists.txt  ChartDisplay.cpp  ChartDisplay.h  DeviceDisplay.cpp  DeviceDisplay.h  ExchangeJSON.h  MoneyDisplay.cpp  MoneyDisplay.h  RigDisplay.cpp  RigDisplay.h  RigsJSON.h  Scene.h  SceneDisplays.cpp  SceneDisplays.h  SceneManager.cpp  SceneManager.h  SceneMenu.cpp  SceneMenu.h  SceneSettings.cpp  SceneSettings.h  Settings.cpp  Settings.h  TextBox.cpp  TextBox.h  main.cpp
